# DSController

./: .gitignore  CMakeLists.txt
data/: Curve_go_right.json
data/DSController/: VariantInfo-DSController.xml
etc/cmake/: ArmarXPackageVersion.cmake  UseDSController.cmake
etc/doxygen/: mainpage.dox
etc/doxygen/pages/: Components.dox  FAQ.dox  GuiPlugins.dox  HowTos.dox  Overview.dox  Tutorials.dox
source/: CMakeLists.txt
source/DSController/: CMakeLists.txt
source/DSController/interface/: CMakeLists.txt  DSControllerBase.ice
source/DSController/libraries/: CMakeLists.txt
source/DSController/libraries/DSRTController/: CMakeLists.txt  DSRTController.cpp  DSRTController.h  GMRDynamics.cpp  GMRDynamics.h  Gaussians.h
source/DSController/libraries/DSRTController/test/: CMakeLists.txt  DSRTControllerTest.cpp
source/DSController/statecharts/: CMakeLists.txt
source/DSController/statecharts/DSControllerGroup/: CMakeLists.txt  DSControllerGroup.scgxml  DSControllerGroupRemoteStateOfferer.cpp  DSControllerGroupRemoteStateOfferer.h  DSControllerTest.cpp  DSControllerTest.h  DSControllerTest.xml
